using rollup instead

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <gatorpower-app></gatorpower-app>
 
-  <script type="module" src="./out-tsc/src/gatorpower-app.js"></script>
+  <script type="module" src="./bundle.js"></script>
 </body>
 
 </html>
