--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="Description" content="Put your description here.">
+  <meta name="Description" content="Leverage the extensive full-stack development expertise of Phil Tucker. Gain insights into effective software development across various industries, utilizing technologies like HTML5, CSS3, JavaScript, Angular, and React. Ideal for aspiring and experienced developers seeking practical, real-world guidance.">
   <base href="/">
 
   <style>
